# cobble

./: .dockerignore  .gitignore  Cargo.toml  README.md  cobble.toml  notes.md  project.lua  tools.lua
.github/workflows/: docs.yml  release.yml  rust.yml
docs/: constraints.txt  project.lua  pyproject.toml
docs/cobble/: mkdocs.yml
docs/cobble/docs/: cobl-cli.md  concepts.md  index.md  installation.md  modules.md  project-def.md  workspace-def.md
examples/simple_project/: cobble.toml  take_time.sh
src/: calc_artifacts.rs  concurrent_io.rs  config.rs  db.rs  dependency.rs  execute.rs  lib.rs  load.rs  main.rs  project_config.lua  query.rs  resolve.rs  task_executor.lua  task_selection.rs  vars.rs  workspace.rs
src/cobble/: build_env.rs  datamodel.rs  lua_env.rs  mod.rs  resolve.rs  task.rs  workspace.rs
src/cobl/: config.rs  dependency.rs  execute.rs  load.rs  mod.rs  query.rs  task_selection.rs  workspace.rs
src/commands/: clean.rs  list.rs  mod.rs  run.rs
src/datamodel/: action.rs  artifact.rs  build_env.rs  dependency.rs  mod.rs  project.rs  task.rs  tool.rs  types.rs  validate.rs
src/execute/: action.rs  clean_task_job.rs  env_action_job.rs  execute.rs  invoke_action.lua  job_io.rs  mod.rs  task_executor.lua  task_job.rs  tool_check_job.rs  worker.rs
src/lua/: cmd.lua  cmd.rs  detached.rs  detached_value.rs  fs.lua  fs.rs  glob.rs  if_else.lua  iter.lua  json.lua  json.rs  lua_env.rs  maybe.lua  mod.rs  on_scope_exit.lua  path.lua  path.rs  scope.lua  script_dir.lua  script_dir.rs  serialized.rs  table_util.lua  tblext.lua  toml.lua  toml.rs  userdata.rs  version.lua
src/project_def/: action.rs  artifact.rs  build_env.rs  dependency.rs  mod.rs  project.rs  task.rs  tool.rs  types.rs  validate.rs
src/util/: hash.rs  mod.rs  onscopeexit.rs
src/workspace/: _resolve.rs  config.rs  db.rs  dependency.rs  execute.rs  graph.rs  load.rs  mod.rs  query.rs  resolve.rs  task_executor.lua  task_selection.rs  vars.rs
test/: project.lua  python_nopoetry.Dockerfile  python_poetry.Dockerfile  python_poetry.lua
test/python_poetry/: README.md  project.lua  pyproject.toml
test/python_poetry/python_poetry/: main.py
test/simple_project/: project.lua
test/testproject/: cobble_workspace.lua  project.lua
test_repos/python_poetry/: Dockerfile.poetry  cobble.toml  project.lua  pyproject.toml  tool_check_tests.lua
(+36 files in other folders)
