[package]
name = "cobble"
version = "0.1.16"
edition = "2021"
license = "GPL-3.0"
authors = ["Jeremiah Darais <contact@jeremiahdarais.com>"]
description = "A multi-environment, multi-project build automation tool"
readme = "README.md"
homepage = "https://jdarais.github.io/cobble/"
repository = "https://github.com/jdarais/cobble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
dunce = "1.0.4"
glob = "0.3.1"
lmdb = "0.8.0"
mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
toml = "0.8.12"
wildmatch = "2.3.4"

[dev-dependencies]
mktemp = "0.5.1"

[[bin]]
name = "cobl"

[profile.ci]
inherits = "dev"
debug = 0
strip = true
